applications/authentik/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    homelab.dohrm.fr/env: prod
    homelab.dohrm.fr/tier: platform
